opam-version:     "1.4"
name:             "jbuild-pp"
version:          "0.1"
maintainer:       "Christian Lindig <lindig@gmail.com>"
authors:          "Christian Lindig <lindig@gmail.com>"
homepage:         "https://github.com/lindig/jbuild-pp"
bug-reports:      "https://github.com/lindig/jbuild-pp/issues"
license:          "BSD"
dev-repo:         "https://github.com/lindig/jbuild-pp.git"
build: [
 ["jbuilder" "build" "-j" jobs "@install"]
]
depends: [
  "containers"
  "jbuilder" {build}
]
